[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pot/Pot.tscn" type="PackedScene" id=1]
[ext_resource path="res://HeatGauge/HeatGauge.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Progress/ProgressCircle.tscn" type="PackedScene" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 12, 5 )

[sub_resource type="ProceduralSky" id=2]

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_color = Color( 0.109804, 0.109804, 0.109804, 1 )
dof_blur_far_enabled = true
dof_blur_far_distance = 5.0
dof_blur_far_transition = 3.0
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 4.0
dof_blur_near_transition = 3.0
dof_blur_near_quality = 2
glow_enabled = true

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.5, 0.5, 0.5 )

[node name="Game" type="Spatial"]
script = ExtResource( 3 )

[node name="Pot" parent="." instance=ExtResource( 1 )]
liquid_color = Color( 0.74902, 0.301961, 0.301961, 0.501961 )
emit_fire = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.914868, 0.403753, 0, -0.403753, 0.914868, 0, 2.29919, 3.69436 )
fov = 50.0

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.514972 )
mesh = SubResource( 1 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75652, 2.03965, 1.35963 )
light_color = Color( 0.541176, 0.482353, 0.372549, 1 )
shadow_enabled = true
shadow_bias = 0.1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, 0.269, 1.483 )
mesh = SubResource( 4 )
material/0 = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeatGauge" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 489, 476 )

[node name="ProgressCircle" parent="CanvasLayer" instance=ExtResource( 4 )]

[connection signal="stirred" from="Pot" to="CanvasLayer/HeatGauge" method="stir"]
[connection signal="stir_in_danger" from="CanvasLayer/HeatGauge" to="." method="_on_HeatGauge_stir_in_danger"]
[connection signal="stir_in_range" from="CanvasLayer/HeatGauge" to="." method="_on_HeatGauge_stir_in_range"]
[connection signal="stir_out_of_danger" from="CanvasLayer/HeatGauge" to="." method="_on_HeatGauge_stir_out_of_danger"]
[connection signal="stir_out_of_range" from="CanvasLayer/HeatGauge" to="." method="_on_HeatGauge_stir_out_of_range"]
